--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Galeon Hospitals Map</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -342,6 +341,16 @@
 
         /* Media queries pour le responsive */
         @media (max-width: 1024px) {
+            #hamburger {
+                top: calc(85px + env(safe-area-inset-top));
+                left: calc(8px + env(safe-area-inset-left));
+            }
+
+            #theme-toggle {
+                top: calc(10px + env(safe-area-inset-top));
+                right: calc(10px + env(safe-area-inset-right));
+            }
+
             .leaflet-popup-content-wrapper {
                 max-width: 220px;
                 padding: 5px;
@@ -381,6 +390,7 @@
             }
 
             .chart-container {
+                bottom: calc(10px + env(safe-area-inset-bottom));
                 left: 50%;
                 transform: translateX(-50%);
                 width: auto;
@@ -399,6 +409,8 @@
             }
 
             .controls {
+                top: calc(10px + env(safe-area-inset-top));
+                left: calc(60px + env(safe-area-inset-left));
                 width: 180px;
                 padding: 10px;
                 font-size: 12px;
@@ -429,6 +441,12 @@
         }
 
         @media (max-width: 1024px) and (orientation: landscape) {
+            .leaflet-control-zoom {
+                top: 70px;
+                left: 10px;
+            }
+
+
             .gauge-wrapper {
                 padding: 0px;
             }
@@ -463,6 +481,11 @@
         #map {
             height: calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
             width: 100vw;
+            position: fixed;
+            top: env(safe-area-inset-top);
+            left: 0;
+            right: 0;
+            bottom: env(safe-area-inset-bottom);
         }
     </style>
 </head>
@@ -678,6 +701,17 @@
             adjustMapContainer(isMobile, isLandscape);
             adjustLegendContainer(isMobile, isLandscape);
             adjustGauges(isMobile);
+
+            const zoomControl = document.querySelector('.leaflet-control-zoom');
+            if (zoomControl) {
+                if (isMobile && isLandscape) {
+                    zoomControl.style.top = '70px';
+                    zoomControl.style.left = '10px';
+                } else {
+                    zoomControl.style.top = '';
+                    zoomControl.style.left = '';
+                }
+            }
 
             if (map) {
                 map.invalidateSize();
